--- a/whats-re-app/package.json
+++ b/whats-re-app/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "^1.4.0",
+    "fs": "^0.0.1-security",
+    "next": "^13.3.4",
+    "papaparse": "^5.4.1",
+    "puppeteer": "^19.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
